--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,5 +3,6 @@
     <div class= "logos">
             <a href="https://twitter.com/NassourJoe"><img class="twitter" src ="https://i.imgur.com/gjxesPV.png" alt=""></a>
             <p class ="footer">nassour.joe@gmail.com</p><p class="footer">Denver, CO</p>
-            </div></section>
+            </div>
+        </section>
 </html>
