--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,49 @@
-<body>
-<%- include('./partials/header') %>
-<grid>
-  <div id="video_motto_div" class="grid1">
-    <video autoplay muted loop>
-      <source src="https://i.imgur.com/tB0hiOE.mp4" type=video/mp4>
-    </video>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  </head>
 
-    <div class="slide-left">
-      <p class="motto">
-        Telomeres and Immortality of Cancers
-      </p>
-      <p class="motto-desc">
-        Studying how cancer cells evade telomere-dependent proliferative
-        barriers and achieve immortality
-      </p>
+  <section class="main">
+    <div class="head_div">
+      <nav class="head_navbar">
+        <a href="/home">Home</a>
+        <a href="/team">Team</a>
+        <a href="/research">Research</a>
+        <a href="/publications">Publications</a>
+        <a href="/news">News</a>
+        <a href="/contact">Contact</a>
+      </nav>
+      <h1 class="head_title">Nassour Lab</h1>
     </div>
-  </div>
-</body>
-  <div class="grid2">
+
+    <div id="video_motto_div" class="grid1">
+      <video autoplay muted loop>
+        <source src="https://i.imgur.com/tB0hiOE.mp4" type=video/mp4>
+      </video>
+
+      <div class="slide-left">
+        <p class="motto">
+          Telomeres and Immortality of Cancers
+        </p>
+        <p class="motto-desc">
+          Studying how cancer cells evade telomere-dependent proliferative
+          barriers and achieve immortality
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="main2">
     <p class="about">
       Cancers arise by an evolutionary process as genetic and epigenetic changes
       accumulate in somatic cells allowing them to escape proliferative barriers
@@ -47,7 +73,7 @@
       for fellows and students. We encourage you to explore our website and
       contact us for discussions, collaborations, or career opportunities.
     </p>
-  </div>
-</grid>
+  </section>
 
-<%- include('./partials/footer') %>
+  <%- include('./partials/footer') %>
+</html>
