--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    
   <head>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,95 +13,99 @@
       rel="stylesheet"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-   
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
   </head>
 
-
-  
   <section class="main">
-    <div class="head_div">
-      <nav class="head_navbar">
-       <a  class = "mainlink" href="#home">Home</a>
-       <a  href="/team">Team</a>
-       <a  href="/research">Research</a>
-       <a  href="/publications">Publications</a>
-       <a href="/contact">Contact</a>
-      </nav>
+    <nav class="head_navbar">
+      <a class="mainlink" href="#home">Home</a>
+      <a href="/team">Team</a>
+      <a href="/research">Research</a>
+      <a href="/publications">Publications</a>
+      <a href="/philosophy">Philosophy</a>
+      <a href="/contact">Contact</a>
+    </nav>
 
-    </div>
-
-    <div ><h1 class ="title">NASSOUR LAB</h1></div>
+    <div><h1 class="title">NASSOUR LAB</h1></div>
     <div id="video_motto_div" class="grid1">
       <video autoplay muted loop>
         <source src="https://i.imgur.com/tB0hiOE.mp4" type=video/mp4>
       </video>
 
       <div class="motto_main">
-        
         <p id="telomere">TELOMERE FUNCTIONS IN AGING AND CANCER</p>
-      
+      </div>
     </div>
   </section>
 
   <script>
-      $(document).ready(function(){
-        // Add smooth scrolling to all links
-        $("a").on('click', function(event) {
-      
-          // Make sure this.hash has a value before overriding default behavior
-          if (this.hash !== "") {
-            // Prevent default anchor click behavior
-            event.preventDefault();
-      
-            // Store hash
-            var hash = this.hash;
-      
-            // Using jQuery's animate() method to add smooth page scroll
-            // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-            $('html, body').animate({
+    $(document).ready(function() {
+      // Add smooth scrolling to all links
+      $("a").on("click", function(event) {
+        // Make sure this.hash has a value before overriding default behavior
+        if (this.hash !== "") {
+          // Prevent default anchor click behavior
+          event.preventDefault();
+
+          // Store hash
+          var hash = this.hash;
+
+          // Using jQuery's animate() method to add smooth page scroll
+          // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+          $("html, body").animate(
+            {
               scrollTop: $(hash).offset().top
-            }, 800, function(){
-      
+            },
+            800,
+            function() {
               // Add hash (#) to URL when done scrolling (default click behavior)
               window.location.hash = hash;
-            });
-          } // End if
-        });
+            }
+          );
+        } // End if
       });
-      </script>
- <div id="container">
-  <section class="main2" id="home">
-   
-    <p class="about1">
-        Our laboratory is investigating various aspects of telomere biology, with a particular focus on 
-        understanding how the shortening of telomeres during replicative aging creates barriers to cell 
-        proliferation and restricts the development of cancer. We use a combination of cutting-edge techniques 
-        in cell biology, molecular biology, and single-cell multiomics to unravel the complex interplay between 
-        telomere function, innate immune signaling, and autophagy, and how these pathways synergize to suppress 
-        the early stages of tumor development. Our ultimate objective is to deepen our understanding of cancer biology 
-        and develop innovative strategies to combat this disease.
-    </p>
-    <ul class="about2">
-      Currently, we are working on these aspects of telomere biology:
-      <li>Telomere-dependent proliferative barriers</li>
-      <li>Escape from crisis and immortalization</li>
-      <li>Telomere-driven autophagy and cell death</li>
-      <li>
-        Telomere deprotection, genomic instability, and innate immune activation
-      </li>
-    </ul>
-    <p class="about3">
-        We strive to create a supportive, diverse, and inclusive laboratory 
-        environment with exceptional training and career development opportunities for fellows and students. 
-        We encourage you to explore our website and contact us for discussions, collaborations, or career opportunities.
-    </p>
-    <%- include('./partials/footer') %>
-
-  </section>
-</div>
-
+    });
+  </script>
+  <div id="container">
+    <section class="main2" id="home">
+      <p class="about1">
+        Cancer emerges due to genetic and epigenetic changes that accumulate in
+        somatic cells, allowing them to evade normal proliferation limits and
+        attain immortality. Our laboratory studies various aspects of telomere
+        biology, with a specific focus on understanding how the shortening of
+        telomeres during replicative aging creates barriers to cell
+        proliferation and restricts the development of cancer.
+        <br /><br />
+        Our research entails a combination of advanced techniques in cell
+        biology, molecular biology, and single-cell multiomics to explore the
+        interplay between telomere function, innate immune signaling, and
+        autophagy, and how these pathways work together to suppress the early
+        stages of tumor development. Our overarching goal is to deepen our
+        understanding of cancer biology and develop innovative strategies to
+        combat this disease.
+      </p>
+      <ul class="about2">
+        Currently, we are working on these aspects of telomere biology:
+        <li>Proliferative barriers and cell immortalization</li>
+        <li>
+          Crosstalk between telomeres, mitochondria, and innate immune signaling
+        </li>
+        <li>Autophagy and genomic consequences of telomere dysfunction</li>
+        <li>
+          Autophagy and telomere-driven cell death
+        </li>
+      </ul>
+      <p class="about3">
+        We strive to create a supportive, diverse, and inclusive laboratory
+        environment with exceptional training and career development
+        opportunities for fellows and students. We encourage you to explore our
+        website and contact us for discussions, collaborations, or career
+        opportunities.
+      </p>
+      <%- include('./partials/footer') %>
+    </section>
+  </div>
 </html>
